# termifind-rust

./: .gitignore  Cargo.toml  README.md  TODO.md  termifind_settings.json
src/: main.rs  path_container.rs  settings.rs  utils.rs
src/path_container/: directory_container.rs
src/path_container/directory_container/: directory_item.rs
src/utils/: maths.rs  string.rs
src/utils/string/: formatting.rs  styling.rs
