[package]
name = "termifind"
version = "0.1.0"
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9.2"
outliers = "0.1.0"
num = "0.2.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
term_size = "0.3.1"
